# zed

./: add_channels_console.py  add_hotpath.py
crates/acp_thread/: Cargo.toml
crates/acp_tools/: Cargo.toml
crates/action_log/: Cargo.toml
crates/activity_indicator/: Cargo.toml
crates/agent/: Cargo.toml
crates/agent_servers/: Cargo.toml
crates/agent_settings/: Cargo.toml
crates/agent_ui/: Cargo.toml
crates/ai_onboarding/: Cargo.toml
crates/anthropic/: Cargo.toml
crates/askpass/: Cargo.toml
crates/assets/: Cargo.toml
crates/assistant_slash_command/: Cargo.toml
crates/assistant_slash_commands/: Cargo.toml
crates/assistant_slash_commands/src/: file_command.rs  streaming_example_command.rs
crates/assistant_text_thread/: Cargo.toml
crates/audio/: Cargo.toml
crates/auto_update/: Cargo.toml
crates/auto_update_helper/: Cargo.toml
crates/auto_update_helper/src/: auto_update_helper.rs
crates/auto_update_ui/: Cargo.toml
crates/aws_http_client/: Cargo.toml
crates/bedrock/: Cargo.toml
crates/breadcrumbs/: Cargo.toml
crates/buffer_diff/: Cargo.toml
crates/call/: Cargo.toml
crates/channel/: Cargo.toml
crates/cli/: Cargo.toml
crates/client/: Cargo.toml
crates/clock/: Cargo.toml
crates/cloud_api_client/: Cargo.toml
crates/cloud_api_types/: Cargo.toml
crates/cloud_llm_client/: Cargo.toml
crates/cloud_zeta2_prompt/: Cargo.toml
crates/codestral/: Cargo.toml
crates/collab/: Cargo.toml
crates/collab_ui/: Cargo.toml
crates/collections/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/command_palette_hooks/: Cargo.toml
crates/command_palette_hooks/src/: command_palette_hooks.rs
crates/component/: Cargo.toml
crates/context_server/: Cargo.toml
crates/context_server/src/: test.rs
crates/copilot/: Cargo.toml
crates/crashes/: Cargo.toml
crates/credentials_provider/: Cargo.toml
crates/dap/: Cargo.toml
crates/dap_adapters/: Cargo.toml
crates/db/: Cargo.toml
crates/debug_adapter_extension/: Cargo.toml
crates/debugger_tools/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/deepseek/: Cargo.toml
crates/denoise/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/docs_preprocessor/: Cargo.toml
crates/edit_prediction/: Cargo.toml
crates/edit_prediction_button/: Cargo.toml
crates/edit_prediction_context/: Cargo.toml
crates/editor/: Cargo.toml
crates/eval/: Cargo.toml
crates/explorer_command_injector/: Cargo.toml
crates/extension/: Cargo.toml
crates/extension_api/: Cargo.toml
crates/extension_cli/: Cargo.toml
crates/extension_host/: Cargo.toml
crates/extensions_ui/: Cargo.toml
crates/feature_flags/: Cargo.toml
crates/feedback/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/file_icons/: Cargo.toml
crates/fs/: Cargo.toml
crates/fs_benchmarks/: Cargo.toml
crates/fsevent/: Cargo.toml
crates/fuzzy/: Cargo.toml
crates/git/: Cargo.toml
crates/git_hosting_providers/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/go_to_line/: Cargo.toml
crates/google_ai/: Cargo.toml
crates/gpui/: Cargo.toml
crates/gpui_macros/: Cargo.toml
crates/gpui_tokio/: Cargo.toml
crates/html_to_markdown/: Cargo.toml
crates/http_client/: Cargo.toml
crates/http_client_tls/: Cargo.toml
crates/icons/: Cargo.toml
crates/image_viewer/: Cargo.toml
crates/inspector_ui/: Cargo.toml
crates/install_cli/: Cargo.toml
crates/journal/: Cargo.toml
crates/json_schema_store/: Cargo.toml
crates/keymap_editor/: Cargo.toml
crates/language/: Cargo.toml
crates/language_extension/: Cargo.toml
crates/language_model/: Cargo.toml
crates/language_models/: Cargo.toml
crates/language_onboarding/: Cargo.toml
crates/language_selector/: Cargo.toml
crates/language_tools/: Cargo.toml
crates/languages/: Cargo.toml
crates/line_ending_selector/: Cargo.toml
crates/livekit_api/: Cargo.toml
crates/livekit_client/: Cargo.toml
crates/lmstudio/: Cargo.toml
crates/lsp/: Cargo.toml
crates/markdown/: Cargo.toml
crates/markdown_preview/: Cargo.toml
crates/media/: Cargo.toml
crates/menu/: Cargo.toml
crates/migrator/: Cargo.toml
crates/mistral/: Cargo.toml
crates/multi_buffer/: Cargo.toml
crates/nc/: Cargo.toml
crates/net/: Cargo.toml
crates/node_runtime/: Cargo.toml
crates/notifications/: Cargo.toml
crates/ollama/: Cargo.toml
crates/onboarding/: Cargo.toml
crates/open_ai/: Cargo.toml
crates/open_router/: Cargo.toml
crates/outline/: Cargo.toml
crates/outline_panel/: Cargo.toml
crates/panel/: Cargo.toml
crates/paths/: Cargo.toml
crates/picker/: Cargo.toml
crates/prettier/: Cargo.toml
crates/project/: Cargo.toml
crates/project_panel/: Cargo.toml
crates/project_symbols/: Cargo.toml
crates/prompt_store/: Cargo.toml
crates/proto/: Cargo.toml
crates/recent_projects/: Cargo.toml
crates/refineable/: Cargo.toml
crates/release_channel/: Cargo.toml
crates/remote/: Cargo.toml
crates/remote_server/: Cargo.toml
crates/repl/: Cargo.toml
crates/reqwest_client/: Cargo.toml
crates/rich_text/: Cargo.toml
crates/rope/: Cargo.toml
crates/rpc/: Cargo.toml
crates/rules_library/: Cargo.toml
crates/scheduler/: Cargo.toml
crates/schema_generator/: Cargo.toml
crates/search/: Cargo.toml
crates/semantic_version/: Cargo.toml
crates/session/: Cargo.toml
crates/settings/: Cargo.toml
crates/settings_json/: Cargo.toml
crates/settings_macros/: Cargo.toml
crates/settings_profile_selector/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/snippet/: Cargo.toml
crates/snippet_provider/: Cargo.toml
crates/snippets_ui/: Cargo.toml
crates/sqlez/: Cargo.toml
crates/sqlez_macros/: Cargo.toml
crates/story/: Cargo.toml
crates/storybook/: Cargo.toml
crates/streaming_diff/: Cargo.toml
crates/sum_tree/: Cargo.toml
crates/supermaven/: Cargo.toml
crates/supermaven_api/: Cargo.toml
crates/svg_preview/: Cargo.toml
crates/system_specs/: Cargo.toml
crates/tab_switcher/: Cargo.toml
crates/task/: Cargo.toml
crates/tasks_ui/: Cargo.toml
crates/telemetry/: Cargo.toml
crates/telemetry_events/: Cargo.toml
(+117 files in other folders)
