[package]
name = "anthropic"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

hotpath-off = ["hotpath/hotpath-off"]
channels-console = ["dep:channels-console"]
default = []
schemars = ["dep:schemars"]

[lints]
workspace = true

[lib]
path = "src/anthropic.rs"

[dependencies]
hotpath = { version = "0.7", optional = true }
channels-console = { version = "0.3", optional = true, features=['tokio', 'futures'] }
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
http_client.workspace = true
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
strum.workspace = true
thiserror.workspace = true
