[package]
name = "askpass"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/askpass.rs"

[dependencies]
hotpath = { version = "0.7", optional = true }

anyhow.workspace = true
futures.workspace = true
gpui.workspace = true
net.workspace = true
smol.workspace = true
log.workspace = true
tempfile.workspace = true
util.workspace = true
zeroize.workspace = true


[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

hotpath-off = ["hotpath/hotpath-off"]

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[package.metadata.cargo-machete]
ignored = ["log"]
