[package]
name = "aws_http_client"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/aws_http_client.rs"

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

hotpath-off = ["hotpath/hotpath-off"]
channels-console = ["dep:channels-console"]
default = []

[dependencies]
hotpath = { version = "0.7", optional = true }
channels-console = { version = "0.3", optional = true, features=['tokio', 'futures'] }
aws-smithy-runtime-api.workspace = true
aws-smithy-types.workspace = true
http_client.workspace = true
