[package]
name = "clock"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/clock.rs"
doctest = false

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off"]
channels-console = ["dep:channels-console"]
test-support = ["dep:parking_lot"]

[dependencies]
hotpath = { version = "0.7", optional = true }
channels-console = { version = "0.3", optional = true, features=['tokio', 'futures'] }
parking_lot = { workspace = true, optional = true }
serde.workspace = true
smallvec.workspace = true
