[package]
name = "clock"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/clock.rs"
doctest = false

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off"]

test-support = ["dep:parking_lot"]

[dependencies]
hotpath = { version = "0.7", optional = true }

parking_lot = { workspace = true, optional = true }
serde.workspace = true
smallvec.workspace = true
