[package]
name = "cloud_llm_client"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license = "Apache-2.0"

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

hotpath-off = ["hotpath/hotpath-off"]

test-support = []

[lints]
workspace = true

[lib]
path = "src/cloud_llm_client.rs"

[dependencies]
hotpath = { version = "0.7", optional = true }

anyhow.workspace = true
chrono.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
pretty_assertions.workspace = true
indoc.workspace = true
