[package]
name = "collections"
version = "0.1.0"
edition.workspace = true
publish = false
license = "Apache-2.0"
description = "Standard collection type re-exports used by Zed and GPUI"

[lints]
workspace = true

[lib]
path = "src/collections.rs"
doctest = false

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

hotpath-off = ["hotpath/hotpath-off"]
channels-console = ["dep:channels-console"]
test-support = []

[dependencies]
hotpath = { version = "0.7", optional = true }
channels-console = { version = "0.3", optional = true, features=['tokio', 'futures'] }
indexmap.workspace = true
rustc-hash.workspace = true
