[package]
name = "command_palette_hooks"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/command_palette_hooks.rs"
doctest = false

[dependencies]
hotpath = { version = "0.7", optional = true }

collections.workspace = true
derive_more.workspace = true
gpui.workspace = true
workspace.workspace = true

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

hotpath-off = ["hotpath/hotpath-off"]

