[package]
name = "component"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/component.rs"

[dependencies]
hotpath = { version = "0.6", optional = true }
channels-console = { version = "0.3", optional = true, features=['tokio', 'futures'] }
collections.workspace = true
gpui.workspace = true
inventory.workspace = true
parking_lot.workspace = true
strum.workspace = true
theme.workspace = true

[dev-dependencies]
documented.workspace = true

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total = ["hotpath/hotpath-alloc-count-total"]
hotpath-off = ["hotpath/hotpath-off"]
channels-console = ["dep:channels-console"]
default = []
