[package]
name = "debug_adapter_extension"
version = "0.1.0"
license = "GPL-3.0-or-later"
publish.workspace = true
edition.workspace = true

[dependencies]
hotpath = { version = "0.6", optional = true }
channels-console = { version = "0.3", optional = true, features=['tokio', 'futures'] }
anyhow.workspace = true
async-trait.workspace = true
collections.workspace = true
dap.workspace = true
extension.workspace = true
gpui.workspace = true
serde_json.workspace = true
util.workspace = true
task.workspace = true


[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total = ["hotpath/hotpath-alloc-count-total"]
hotpath-off = ["hotpath/hotpath-off"]
channels-console = ["dep:channels-console"]
[lints]
workspace = true

[lib]
path = "src/debug_adapter_extension.rs"
