[package]
name = "debug_adapter_extension"
version = "0.1.0"
license = "GPL-3.0-or-later"
publish.workspace = true
edition.workspace = true

[dependencies]
hotpath = { version = "0.7", optional = true }

anyhow.workspace = true
async-trait.workspace = true
collections.workspace = true
dap.workspace = true
extension.workspace = true
gpui.workspace = true
serde_json.workspace = true
util.workspace = true
task.workspace = true


[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

hotpath-off = ["hotpath/hotpath-off"]

[lints]
workspace = true

[lib]
path = "src/debug_adapter_extension.rs"
